# BeagleTA

./: .gitignore  Cargo.toml  README.md  execution_log.md
1_beagleTA_parser/src/: file_ops.rs  main.rs  py_drivers.rs  text_analysis.rs  toml_extract.rs
2_csv_cleaner_filter/src/: main.rs
3_csv_random_sampler/: README.md  csv_random_sample_release  input.csv
3_csv_random_sampler/src/: main.rs
3_csv_random_sampler/src/bk/: main_01.rs  main_02.rs  main_03_working.rs  main_04.rs
examples/: kws.txt
