[package]
name = "BeagleTA"
version = "1.5.9"
edition = "2021"
categories  = ["Parser"]
license = "MIT"
repository = ""
description = "BeagleTA: A text analysis processing pipeline for the analysis of relationships between documents based on word usage."


[dependencies]
clap = "4.5.26" # at dev time
colored = "3.0.0"
csv = "1.3.1"
fs = "0.0.5"
jwalk = "0.8.1"
rand = "0.8.0" # at dev time
regex = "1.11.1"
serde = {version = "1.0.218", features = ["derive"]} 
serde_json = "1.0"
toml = "0.8.20"
crossbeam-channel = "0.5.15"


# Specify the binaries
[[bin]]
name = "1_beagleTA_parser"
path = "1_beagleTA_parser/src/main.rs"

[[bin]]
name = "2_csv_cleaner_filter"
path = "2_csv_cleaner_filter/src/main.rs"

[[bin]]
name = "3_csv_random_sampler"
path = "3_csv_random_sampler/src/main.rs"
